Package_Tools/include-C/libxml2/libxml/in_arbeit/fertig/tree.h

/**
 * LIBXML_NAMESPACE_DICT:
 *
 * Defines experimental behaviour:
 * 1) xmlNs gets an additional field @context (a xmlDoc)
 * 2) when creating a tree, xmlNs->href is stored in the dict of xmlDoc.
 */
/* #define LIBXML_NAMESPACE_DICT */

/**
 * xmlBufferAllocationScheme:
 *
 * A buffer allocation scheme can be defined to either match exactly the
 * need or double it's allocated size each time it is found too small.
 */

typedef enum {
    XML_BUFFER_ALLOC_DOUBLEIT,	/* double each time one need to grow */
    XML_BUFFER_ALLOC_EXACT,	/* grow only to the minimal size */
    XML_BUFFER_ALLOC_IMMUTABLE, /* immutable buffer */
    XML_BUFFER_ALLOC_IO,	/* special allocation scheme used for I/O */
    XML_BUFFER_ALLOC_HYBRID,	/* exact up to a threshold, and doubleit thereafter */
    XML_BUFFER_ALLOC_BOUNDED	/* limit the upper size of the buffer */
} xmlBufferAllocationScheme;
/**
 * xmlBuffer:
 *
 * A buffer structure, this old construct is limited to 2GB and
 * is being deprecated, use API with xmlBuf instead
 */
typedef struct _xmlBuffer xmlBuffer;
typedef xmlBuffer *xmlBufferPtr;
/**
 * xmlBuf:
 *
 * A buffer structure, new one, the actual structure internals are not public
 */

typedef struct _xmlBuf xmlBuf;
typedef xmlNs *xmlNsPtr;
typedef xmlDtd *xmlDtdPtr;
typedef xmlAttr *xmlAttrPtr;
/**
 * xmlNode:
 *
 * A node in an XML tree.
 */
typedef struct _xmlNode xmlNode;
typedef xmlNode *xmlNodePtr;
/**
 * xmlDoc:
 *
 * An XML document.
 */
typedef struct _xmlDoc xmlDoc;
typedef xmlDoc *xmlDocPtr;
extern int 
		xmlValidateQName	(const xmlChar *value,
					 int space);
extern int 
		xmlValidateName		(const xmlChar *value,
					 int space);
extern int 
		xmlValidateNMToken	(const xmlChar *value,
					 int space);
extern xmlChar * 
		xmlBuildQName		(const xmlChar *ncname,
					 const xmlChar *prefix,
					 xmlChar *memory,
					 int len);
extern xmlChar * 
		xmlSplitQName2		(const xmlChar *name,
					 xmlChar **prefix);
extern const xmlChar * 
		xmlSplitQName3		(const xmlChar *name,
					 int *len);
/*
 * Handling Buffers, the old ones see @xmlBuf for the new ones.
 */

extern void 
		xmlSetBufferAllocationScheme(xmlBufferAllocationScheme scheme);
extern xmlBufferAllocationScheme 
		xmlGetBufferAllocationScheme(void);
extern xmlBufferPtr 
		xmlBufferCreate		(void);
extern xmlBufferPtr 
		xmlBufferCreateSize	(size_t size);
extern xmlBufferPtr 
		xmlBufferCreateStatic	(void *mem,
					 size_t size);
extern int 
		xmlBufferResize		(xmlBufferPtr buf,
					 unsigned int size);
extern void 
		xmlBufferFree		(xmlBufferPtr buf);
extern int 
		xmlBufferDump		(FILE *file,
					 xmlBufferPtr buf);
extern int 
		xmlBufferAdd		(xmlBufferPtr buf,
					 const xmlChar *str,
					 int len);
extern int 
		xmlBufferAddHead	(xmlBufferPtr buf,
					 const xmlChar *str,
					 int len);
extern int 
		xmlBufferCat		(xmlBufferPtr buf,
					 const xmlChar *str);
extern int 
		xmlBufferCCat		(xmlBufferPtr buf,
					 const char *str);
extern int 
		xmlBufferShrink		(xmlBufferPtr buf,
					 unsigned int len);
extern int 
		xmlBufferGrow		(xmlBufferPtr buf,
					 unsigned int len);
extern void 
		xmlBufferEmpty		(xmlBufferPtr buf);
extern const xmlChar* 
		xmlBufferContent	(const xmlBuffer *buf);
extern xmlChar* 
		xmlBufferDetach         (xmlBufferPtr buf);
extern void 
		xmlBufferSetAllocationScheme(xmlBufferPtr buf,
					 xmlBufferAllocationScheme scheme);
extern int 
		xmlBufferLength		(const xmlBuffer *buf);
/*
 * Creating/freeing new structures.
 */
extern xmlDtdPtr 
		xmlCreateIntSubset	(xmlDocPtr doc,
					 const xmlChar *name,
					 const xmlChar *ExternalID,
					 const xmlChar *SystemID);
extern xmlDtdPtr 
		xmlNewDtd		(xmlDocPtr doc,
					 const xmlChar *name,
					 const xmlChar *ExternalID,
					 const xmlChar *SystemID);
extern xmlDtdPtr 
		xmlGetIntSubset		(const xmlDoc *doc);
extern void 
		xmlFreeDtd		(xmlDtdPtr cur);
extern xmlNsPtr 
		xmlNewGlobalNs		(xmlDocPtr doc,
					 const xmlChar *href,
					 const xmlChar *prefix);
extern xmlNsPtr 
		xmlNewNs		(xmlNodePtr node,
					 const xmlChar *href,
					 const xmlChar *prefix);
extern void 
		xmlFreeNs		(xmlNsPtr cur);
extern void 
		xmlFreeNsList		(xmlNsPtr cur);
extern xmlDocPtr 
		xmlNewDoc		(const xmlChar *version);
extern void 
		xmlFreeDoc		(xmlDocPtr cur);
extern xmlAttrPtr 
		xmlNewDocProp		(xmlDocPtr doc,
					 const xmlChar *name,
					 const xmlChar *value);
//#if defined(LIBXML_TREE_ENABLED) || defined(LIBXML_HTML_ENABLED) || \
//    defined(LIBXML_SCHEMAS_ENABLED)
extern xmlAttrPtr 
		xmlNewProp		(xmlNodePtr node,
					 const xmlChar *name,
					 const xmlChar *value);
extern xmlAttrPtr 
		xmlNewNsProp		(xmlNodePtr node,
					 xmlNsPtr ns,
					 const xmlChar *name,
					 const xmlChar *value);
extern xmlAttrPtr 
		xmlNewNsPropEatName	(xmlNodePtr node,
					 xmlNsPtr ns,
					 xmlChar *name,
					 const xmlChar *value);
extern void 
		xmlFreePropList		(xmlAttrPtr cur);
extern void 
		xmlFreeProp		(xmlAttrPtr cur);
extern xmlAttrPtr 
		xmlCopyProp		(xmlNodePtr target,
					 xmlAttrPtr cur);
extern xmlAttrPtr 
		xmlCopyPropList		(xmlNodePtr target,
					 xmlAttrPtr cur);
extern xmlDtdPtr 
		xmlCopyDtd		(xmlDtdPtr dtd);
extern xmlDocPtr 
		xmlCopyDoc		(xmlDocPtr doc,
					 int recursive);
/*
 * Creating new nodes.
 */
extern xmlNodePtr 
		xmlNewDocNode		(xmlDocPtr doc,
					 xmlNsPtr ns,
					 const xmlChar *name,
					 const xmlChar *content);
extern xmlNodePtr 
		xmlNewDocNodeEatName	(xmlDocPtr doc,
					 xmlNsPtr ns,
					 xmlChar *name,
					 const xmlChar *content);
extern xmlNodePtr 
		xmlNewNode		(xmlNsPtr ns,
					 const xmlChar *name);
extern xmlNodePtr 
		xmlNewNodeEatName	(xmlNsPtr ns,
					 xmlChar *name);
extern xmlNodePtr 
		xmlNewChild		(xmlNodePtr parent,
					 xmlNsPtr ns,
					 const xmlChar *name,
					 const xmlChar *content);
extern xmlNodePtr 
		xmlNewDocText		(const xmlDoc *doc,
					 const xmlChar *content);
extern xmlNodePtr 
		xmlNewText		(const xmlChar *content);
extern xmlNodePtr 
		xmlNewDocPI		(xmlDocPtr doc,
					 const xmlChar *name,
					 const xmlChar *content);
extern xmlNodePtr 
		xmlNewPI		(const xmlChar *name,
					 const xmlChar *content);
extern xmlNodePtr 
		xmlNewDocTextLen	(xmlDocPtr doc,
					 const xmlChar *content,
					 int len);
extern xmlNodePtr 
		xmlNewTextLen		(const xmlChar *content,
					 int len);
extern xmlNodePtr 
		xmlNewDocComment	(xmlDocPtr doc,
					 const xmlChar *content);
extern xmlNodePtr 
		xmlNewComment		(const xmlChar *content);
extern xmlNodePtr 
		xmlNewCDataBlock	(xmlDocPtr doc,
					 const xmlChar *content,
					 int len);
extern xmlNodePtr 
		xmlNewCharRef		(xmlDocPtr doc,
					 const xmlChar *name);
extern xmlNodePtr 
		xmlNewReference		(const xmlDoc *doc,
					 const xmlChar *name);
extern xmlNodePtr 
		xmlCopyNode		(xmlNodePtr node,
					 int recursive);
extern xmlNodePtr 
		xmlDocCopyNode		(xmlNodePtr node,
					 xmlDocPtr doc,
					 int recursive);
extern xmlNodePtr 
		xmlDocCopyNodeList	(xmlDocPtr doc,
					 xmlNodePtr node);
extern xmlNodePtr 
		xmlCopyNodeList		(xmlNodePtr node);
extern xmlNodePtr 
		xmlNewTextChild		(xmlNodePtr parent,
					 xmlNsPtr ns,
					 const xmlChar *name,
					 const xmlChar *content);
extern xmlNodePtr 
		xmlNewDocRawNode	(xmlDocPtr doc,
					 xmlNsPtr ns,
					 const xmlChar *name,
					 const xmlChar *content);
extern xmlNodePtr 
		xmlNewDocFragment	(xmlDocPtr doc);
/*
 * Navigating.
 */
extern long 
		xmlGetLineNo		(const xmlNode *node);
extern xmlChar * 
		xmlGetNodePath		(const xmlNode *node);
extern xmlNodePtr 
		xmlDocGetRootElement	(const xmlDoc *doc);
extern xmlNodePtr 
		xmlGetLastChild		(const xmlNode *parent);
extern int 
		xmlNodeIsText		(const xmlNode *node);
extern int 
		xmlIsBlankNode		(const xmlNode *node);
extern xmlNodePtr 
		xmlDocSetRootElement	(xmlDocPtr doc,
					 xmlNodePtr root);
extern void 
		xmlNodeSetName		(xmlNodePtr cur,
					 const xmlChar *name);
extern xmlNodePtr 
		xmlAddChild		(xmlNodePtr parent,
					 xmlNodePtr cur);
extern xmlNodePtr 
		xmlAddChildList		(xmlNodePtr parent,
					 xmlNodePtr cur);
extern xmlNodePtr 
		xmlReplaceNode		(xmlNodePtr old,
					 xmlNodePtr cur);
//#if defined(LIBXML_TREE_ENABLED) || defined(LIBXML_HTML_ENABLED) || \
//    defined(LIBXML_SCHEMAS_ENABLED) || defined(LIBXML_XINCLUDE_ENABLED)
extern xmlNodePtr 
		xmlAddPrevSibling	(xmlNodePtr cur,
					 xmlNodePtr elem);
extern xmlNodePtr 
		xmlAddSibling		(xmlNodePtr cur,
					 xmlNodePtr elem);
extern xmlNodePtr 
		xmlAddNextSibling	(xmlNodePtr cur,
					 xmlNodePtr elem);
extern void 
		xmlUnlinkNode		(xmlNodePtr cur);
extern xmlNodePtr 
		xmlTextMerge		(xmlNodePtr first,
					 xmlNodePtr second);
extern int 
		xmlTextConcat		(xmlNodePtr node,
					 const xmlChar *content,
					 int len);
extern void 
		xmlFreeNodeList		(xmlNodePtr cur);
extern void 
		xmlFreeNode		(xmlNodePtr cur);
extern void 
		xmlSetTreeDoc		(xmlNodePtr tree,
					 xmlDocPtr doc);
extern void 
		xmlSetListDoc		(xmlNodePtr list,
					 xmlDocPtr doc);
/*
 * Namespaces.
 */
extern xmlNsPtr 
		xmlSearchNs		(xmlDocPtr doc,
					 xmlNodePtr node,
					 const xmlChar *nameSpace);
extern xmlNsPtr 
		xmlSearchNsByHref	(xmlDocPtr doc,
					 xmlNodePtr node,
					 const xmlChar *href);
//#if defined(LIBXML_TREE_ENABLED) || defined(LIBXML_XPATH_ENABLED) || \
//    defined(LIBXML_SCHEMAS_ENABLED)
extern xmlNsPtr * 
		xmlGetNsList		(const xmlDoc *doc,
					 const xmlNode *node);