Package_Tools/include-C/libxml2/libxml/in_arbeit/fertig/tree.pp


function xmlValidateQName(value:PxmlChar; space:longint):longint;cdecl;external;
(* Const before type ignored *)
function xmlValidateName(value:PxmlChar; space:longint):longint;cdecl;external;
(* Const before type ignored *)
function xmlValidateNMToken(value:PxmlChar; space:longint):longint;cdecl;external;
{$endif}
(* Const before type ignored *)
(* Const before type ignored *)

function xmlBuildQName(ncname:PxmlChar; prefix:PxmlChar; memory:PxmlChar; len:longint):PxmlChar;cdecl;external;
(* Const before type ignored *)
function xmlSplitQName2(name:PxmlChar; prefix:PPxmlChar):PxmlChar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlSplitQName3(name:PxmlChar; len:Plongint):PxmlChar;cdecl;external;
{
 * Handling Buffers, the old ones see @xmlBuf for the new ones.
  }
procedure xmlSetBufferAllocationScheme(scheme:TxmlBufferAllocationScheme);cdecl;external;
function xmlGetBufferAllocationScheme:TxmlBufferAllocationScheme;cdecl;external;
function xmlBufferCreate:TxmlBufferPtr;cdecl;external;
function xmlBufferCreateSize(size:Tsize_t):TxmlBufferPtr;cdecl;external;
function xmlBufferCreateStatic(mem:pointer; size:Tsize_t):TxmlBufferPtr;cdecl;external;
function xmlBufferResize(buf:TxmlBufferPtr; size:dword):longint;cdecl;external;
procedure xmlBufferFree(buf:TxmlBufferPtr);cdecl;external;
function xmlBufferDump(file:PFILE; buf:TxmlBufferPtr):longint;cdecl;external;
(* Const before type ignored *)
function xmlBufferAdd(buf:TxmlBufferPtr; str:PxmlChar; len:longint):longint;cdecl;external;
(* Const before type ignored *)
function xmlBufferAddHead(buf:TxmlBufferPtr; str:PxmlChar; len:longint):longint;cdecl;external;
(* Const before type ignored *)
function xmlBufferCat(buf:TxmlBufferPtr; str:PxmlChar):longint;cdecl;external;
(* Const before type ignored *)
function xmlBufferCCat(buf:TxmlBufferPtr; str:Pchar):longint;cdecl;external;
function xmlBufferShrink(buf:TxmlBufferPtr; len:dword):longint;cdecl;external;
function xmlBufferGrow(buf:TxmlBufferPtr; len:dword):longint;cdecl;external;
procedure xmlBufferEmpty(buf:TxmlBufferPtr);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlBufferContent(buf:PxmlBuffer):PxmlChar;cdecl;external;
function xmlBufferDetach(buf:TxmlBufferPtr):PxmlChar;cdecl;external;
procedure xmlBufferSetAllocationScheme(buf:TxmlBufferPtr; scheme:TxmlBufferAllocationScheme);cdecl;external;
(* Const before type ignored *)
function xmlBufferLength(buf:PxmlBuffer):longint;cdecl;external;
{
 * Creating/freeing new structures.
  }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlCreateIntSubset(doc:TxmlDocPtr; name:PxmlChar; ExternalID:PxmlChar; SystemID:PxmlChar):TxmlDtdPtr;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlNewDtd(doc:TxmlDocPtr; name:PxmlChar; ExternalID:PxmlChar; SystemID:PxmlChar):TxmlDtdPtr;cdecl;external;
(* Const before type ignored *)
function xmlGetIntSubset(doc:PxmlDoc):TxmlDtdPtr;cdecl;external;
procedure xmlFreeDtd(cur:TxmlDtdPtr);cdecl;external;
{$ifdef LIBXML_LEGACY_ENABLED}
(* Const before type ignored *)
(* Const before type ignored *)
function xmlNewGlobalNs(doc:TxmlDocPtr; href:PxmlChar; prefix:PxmlChar):TxmlNsPtr;cdecl;external;
{$endif}
{ LIBXML_LEGACY_ENABLED  }
(* Const before type ignored *)
(* Const before type ignored *)

function xmlNewNs(node:TxmlNodePtr; href:PxmlChar; prefix:PxmlChar):TxmlNsPtr;cdecl;external;
procedure xmlFreeNs(cur:TxmlNsPtr);cdecl;external;
procedure xmlFreeNsList(cur:TxmlNsPtr);cdecl;external;
(* Const before type ignored *)
function xmlNewDoc(version:PxmlChar):TxmlDocPtr;cdecl;external;
procedure xmlFreeDoc(cur:TxmlDocPtr);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlNewDocProp(doc:TxmlDocPtr; name:PxmlChar; value:PxmlChar):TxmlAttrPtr;cdecl;external;
{#if defined(LIBXML_TREE_ENABLED) || defined(LIBXML_HTML_ENABLED) || \ }
{    defined(LIBXML_SCHEMAS_ENABLED) }
(* Const before type ignored *)
(* Const before type ignored *)
function xmlNewProp(node:TxmlNodePtr; name:PxmlChar; value:PxmlChar):TxmlAttrPtr;cdecl;external;
{$endif}
(* Const before type ignored *)
(* Const before type ignored *)

function xmlNewNsProp(node:TxmlNodePtr; ns:TxmlNsPtr; name:PxmlChar; value:PxmlChar):TxmlAttrPtr;cdecl;external;
(* Const before type ignored *)
function xmlNewNsPropEatName(node:TxmlNodePtr; ns:TxmlNsPtr; name:PxmlChar; value:PxmlChar):TxmlAttrPtr;cdecl;external;
procedure xmlFreePropList(cur:TxmlAttrPtr);cdecl;external;
procedure xmlFreeProp(cur:TxmlAttrPtr);cdecl;external;
function xmlCopyProp(target:TxmlNodePtr; cur:TxmlAttrPtr):TxmlAttrPtr;cdecl;external;
function xmlCopyPropList(target:TxmlNodePtr; cur:TxmlAttrPtr):TxmlAttrPtr;cdecl;external;
{$ifdef LIBXML_TREE_ENABLED}
function xmlCopyDtd(dtd:TxmlDtdPtr):TxmlDtdPtr;cdecl;external;
{$endif}
{ LIBXML_TREE_ENABLED  }
{$if defined(LIBXML_TREE_ENABLED) || defined(LIBXML_SCHEMAS_ENABLED)}

function xmlCopyDoc(doc:TxmlDocPtr; recursive:longint):TxmlDocPtr;cdecl;external;
{$endif}
{ defined(LIBXML_TREE_ENABLED) || defined(LIBXML_SCHEMAS_ENABLED)  }
{
 * Creating new nodes.
  }
(* Const before type ignored *)
(* Const before type ignored *)

function xmlNewDocNode(doc:TxmlDocPtr; ns:TxmlNsPtr; name:PxmlChar; content:PxmlChar):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
function xmlNewDocNodeEatName(doc:TxmlDocPtr; ns:TxmlNsPtr; name:PxmlChar; content:PxmlChar):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
function xmlNewNode(ns:TxmlNsPtr; name:PxmlChar):TxmlNodePtr;cdecl;external;
function xmlNewNodeEatName(ns:TxmlNsPtr; name:PxmlChar):TxmlNodePtr;cdecl;external;
{$if defined(LIBXML_TREE_ENABLED) || defined(LIBXML_SCHEMAS_ENABLED)}
(* Const before type ignored *)
(* Const before type ignored *)

function xmlNewChild(parent:TxmlNodePtr; ns:TxmlNsPtr; name:PxmlChar; content:PxmlChar):TxmlNodePtr;cdecl;external;
{$endif}
(* Const before type ignored *)
(* Const before type ignored *)

function xmlNewDocText(doc:PxmlDoc; content:PxmlChar):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
function xmlNewText(content:PxmlChar):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlNewDocPI(doc:TxmlDocPtr; name:PxmlChar; content:PxmlChar):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlNewPI(name:PxmlChar; content:PxmlChar):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
function xmlNewDocTextLen(doc:TxmlDocPtr; content:PxmlChar; len:longint):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
function xmlNewTextLen(content:PxmlChar; len:longint):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
function xmlNewDocComment(doc:TxmlDocPtr; content:PxmlChar):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
function xmlNewComment(content:PxmlChar):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
function xmlNewCDataBlock(doc:TxmlDocPtr; content:PxmlChar; len:longint):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
function xmlNewCharRef(doc:TxmlDocPtr; name:PxmlChar):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlNewReference(doc:PxmlDoc; name:PxmlChar):TxmlNodePtr;cdecl;external;
function xmlCopyNode(node:TxmlNodePtr; recursive:longint):TxmlNodePtr;cdecl;external;
function xmlDocCopyNode(node:TxmlNodePtr; doc:TxmlDocPtr; recursive:longint):TxmlNodePtr;cdecl;external;
function xmlDocCopyNodeList(doc:TxmlDocPtr; node:TxmlNodePtr):TxmlNodePtr;cdecl;external;
function xmlCopyNodeList(node:TxmlNodePtr):TxmlNodePtr;cdecl;external;
{$ifdef LIBXML_TREE_ENABLED}
(* Const before type ignored *)
(* Const before type ignored *)
function xmlNewTextChild(parent:TxmlNodePtr; ns:TxmlNsPtr; name:PxmlChar; content:PxmlChar):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlNewDocRawNode(doc:TxmlDocPtr; ns:TxmlNsPtr; name:PxmlChar; content:PxmlChar):TxmlNodePtr;cdecl;external;
function xmlNewDocFragment(doc:TxmlDocPtr):TxmlNodePtr;cdecl;external;
{$endif}
{ LIBXML_TREE_ENABLED  }
{
 * Navigating.
  }
(* Const before type ignored *)

function xmlGetLineNo(node:PxmlNode):longint;cdecl;external;
{$if defined(LIBXML_TREE_ENABLED) || defined(LIBXML_DEBUG_ENABLED)}
(* Const before type ignored *)

function xmlGetNodePath(node:PxmlNode):PxmlChar;cdecl;external;
{$endif}
{ defined(LIBXML_TREE_ENABLED) || defined(LIBXML_DEBUG_ENABLED)  }
(* Const before type ignored *)

function xmlDocGetRootElement(doc:PxmlDoc):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
function xmlGetLastChild(parent:PxmlNode):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
function xmlNodeIsText(node:PxmlNode):longint;cdecl;external;
(* Const before type ignored *)
function xmlIsBlankNode(node:PxmlNode):longint;cdecl;external;
{
 * Changing the structure.
  }
{$if defined(LIBXML_TREE_ENABLED) || defined(LIBXML_WRITER_ENABLED)}

function xmlDocSetRootElement(doc:TxmlDocPtr; root:TxmlNodePtr):TxmlNodePtr;cdecl;external;
{$endif}
{ defined(LIBXML_TREE_ENABLED) || defined(LIBXML_WRITER_ENABLED)  }
{$ifdef LIBXML_TREE_ENABLED}
(* Const before type ignored *)

procedure xmlNodeSetName(cur:TxmlNodePtr; name:PxmlChar);cdecl;external;
{$endif}
{ LIBXML_TREE_ENABLED  }

function xmlAddChild(parent:TxmlNodePtr; cur:TxmlNodePtr):TxmlNodePtr;cdecl;external;
function xmlAddChildList(parent:TxmlNodePtr; cur:TxmlNodePtr):TxmlNodePtr;cdecl;external;
{$if defined(LIBXML_TREE_ENABLED) || defined(LIBXML_WRITER_ENABLED)}

function xmlReplaceNode(old:TxmlNodePtr; cur:TxmlNodePtr):TxmlNodePtr;cdecl;external;
{$endif}
{ defined(LIBXML_TREE_ENABLED) || defined(LIBXML_WRITER_ENABLED)  }
{#if defined(LIBXML_TREE_ENABLED) || defined(LIBXML_HTML_ENABLED) || \ }
{    defined(LIBXML_SCHEMAS_ENABLED) || defined(LIBXML_XINCLUDE_ENABLED) }

function xmlAddPrevSibling(cur:TxmlNodePtr; elem:TxmlNodePtr):TxmlNodePtr;cdecl;external;
{$endif}
{ LIBXML_TREE_ENABLED || LIBXML_HTML_ENABLED || LIBXML_SCHEMAS_ENABLED  }

function xmlAddSibling(cur:TxmlNodePtr; elem:TxmlNodePtr):TxmlNodePtr;cdecl;external;
function xmlAddNextSibling(cur:TxmlNodePtr; elem:TxmlNodePtr):TxmlNodePtr;cdecl;external;
procedure xmlUnlinkNode(cur:TxmlNodePtr);cdecl;external;
function xmlTextMerge(first:TxmlNodePtr; second:TxmlNodePtr):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
function xmlTextConcat(node:TxmlNodePtr; content:PxmlChar; len:longint):longint;cdecl;external;
procedure xmlFreeNodeList(cur:TxmlNodePtr);cdecl;external;
procedure xmlFreeNode(cur:TxmlNodePtr);cdecl;external;
procedure xmlSetTreeDoc(tree:TxmlNodePtr; doc:TxmlDocPtr);cdecl;external;
procedure xmlSetListDoc(list:TxmlNodePtr; doc:TxmlDocPtr);cdecl;external;
{
 * Namespaces.
  }
(* Const before type ignored *)
function xmlSearchNs(doc:TxmlDocPtr; node:TxmlNodePtr; nameSpace:PxmlChar):TxmlNsPtr;cdecl;external;
(* Const before type ignored *)
function xmlSearchNsByHref(doc:TxmlDocPtr; node:TxmlNodePtr; href:PxmlChar):TxmlNsPtr;cdecl;external;
{#if defined(LIBXML_TREE_ENABLED) || defined(LIBXML_XPATH_ENABLED) || \ }
{    defined(LIBXML_SCHEMAS_ENABLED) }
(* Const before type ignored *)
(* Const before type ignored *)
function xmlGetNsList(doc:PxmlDoc; node:PxmlNode):PxmlNsPtr;cdecl;external;
{$endif}
{ defined(LIBXML_TREE_ENABLED) || defined(LIBXML_XPATH_ENABLED)  }
